# cdk-diff-summary

./: AGENT.md  LICENSE  README.md  action.yml  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  parser-failure.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  release.yml  tag-release.yml
example_cdk_changesets_json/: large-prod-multistack-cdk-diff.json  medium-apistack-cdk-diff.json  small-webstack-cdk-diff.json
example_cdk_diff_json/: cdk-diff-json-large-realistic.json  cdk-diff-json-medium.json  cdk-diff-json-messy-edge-cases.json  cdk-diff-json-noisy-small.json  cdk-diff-json-tiny.json
scripts/: cdk_diff_summary.py
scripts/cdk_diff_summary/: __init__.py  cli.py  config.py  diff.py  render.py
src/cdk_diff_summary/: __init__.py  cli.py  config.py  diff.py  policy.py  render.py
tests/: conftest.py  test_cli.py  test_diff.py  test_policy.py  test_render.py
